services/app/src/Style.scss
/* ... */
@font-face {
  font-family: 'MinionPro';
  font-style: normal;
  src: url(../../../shared/fonts/MinionPro-Regular.woff) format('woff');
}

@font-face {
  font-family: 'NothingYouCouldDo';
  font-style: normal;
  src: url(../../../shared/fonts/NothingYouCouldDo-Regular.woff2) format('woff2'), url(../../../shared/fonts/NothingYouCouldDo-Regular.woff) format('woff');
}

// ===============================================
// Transitional animation classes
// ===============================================

.next-enter {
  transform: translate(100%);
}
.next-enter.next-enter-active {
  transform: translate(0%);
  transition: transform 300ms ease-in-out;
}
.next-exit {
  position: absolute;
  transform: translate(0%);
}
.next-exit.next-exit-active {
  transform: translate(-100%);
  transition: transform 300ms ease-in-out;
}

.prev-enter {
  transform: translate(-100%);
}
.prev-enter.prev-enter-active {
  transform: translate(0%);
  transition: transform 300ms ease-in-out;
}
.prev-exit {
  position: absolute;
  transform: translate(0%);
}
.prev-exit.prev-exit-active {
  transform: translate(100%);
  transition: transform 300ms ease-in-out;
}

.nav-enter {
  opacity: 1;
}
.nav-enter.nav-enter-active {
  opacity: 1;
}
.nav-exit {
  opacity: 1;
}
.nav-exit.nav-exit-active {
  opacity: 0.01;
  transition: opacity 250ms ease-out;
}

.fade-enter {
  opacity: 0.01;
}
.fade-enter.fade-enter-active {
  opacity: 1;
  transition: opacity 500ms ease-in;
}
.fade-exit {
  opacity: 1;
}
.fade-exit.fade-exit-active {
  opacity: 0.01;
  transition: opacity 500ms ease-out;
}


// ===============================================
// Constants
// ===============================================

$abswidthmax: 769px;
$absheightmax: 1025px;
$absmaxdimension: 1025px;
$lineheight: 1.2;

$largeFontMult: 1.25;
$smallFontMult: 0.8;

$sizemap: (
  appbar: 48px,
  remotefooter: 50px,
  inputsquare: 48px,
  inputspacing: 16px, /* slightly larger on small devices (to prevent false touches) */
  input: 32px, /* size of input icon-style buttons */
  watermark: 36vh, /* height-specific */
  navfooterbtn: 19vw,
  huge: 12vmin,
  large: 6vmin,
  icon: 4.5vmin,
  base: 2vmin,
  small: 1vmin,
  tiny: 0.5vmin,
  spinner: 40vmin,
);

$fontsizemap: (
  timervalue: 24vmin,
  title: 6vmin,
  interactive: 5.5vmin,
  flavor: 4.7vmin,
  label: 18px, // purposefully fixed-size
);

@function fontsize($key) {
  @if map-has-key($fontsizemap, $key) {
    @return map-get($fontsizemap, $key);
  }

  @warn "Unknown `#{$key}` in $fontsizemap.";
  @return null;
}

@function size($key) {
  @if map-has-key($sizemap, $key) {
    @return map-get($sizemap, $key);
  }

  @warn "Unknown `#{$key}` in $sizemap.";
  @return null;
}

$border_desktop: size(base) solid #777;

// ===============================================
// Base/General Styles
// ===============================================

html {
  width: 100%;
  height: 100%;
}

body {
  background-color: $bg_primary;
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: $fontFamilyBase;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

.app_container {
  &, & > div:first-child {
    height: 100%;
    width: 100%;
  }
}

#noscript {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
}

.snackbar {
  span {
    color: $font_color_dark_primary !important;
  }
}

.remote_footer, .nav_footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  background-color: $bg_primary;
  border-top: $border_accent;

  &.quest_theme_horror {
    background-color: $bg_primary_faded;
  }

  &.card_theme_dark {
    background-color: $bg_dark_primary;
    color: $font_color_dark_primary;
  }
}

.nav_footer {
  button .navlabel {
    font-family: Cinzel, serif;
  }

  button {
    min-width: size(large) !important;
    max-width: size(navfooterbtn) !important;
  }
}

.remote_footer {
  padding-top: size(remotefooter) / 10;
  height: size(remotefooter);

  .peers {
    flex: 8;
    text-align: center;
    overflow: hidden;

    .group {
      padding-left: size(base);
      padding-right: size(base);
      display: flex;
      flex-direction: row;
    }

    svg {
      vertical-align: middle;
      padding: 0 size(base);
    }
  }
}

.player1 {
  fill: $magic_red;
}
.player2 {
  fill: $melee_blue;
}
.player3 {
  fill: $music_purple;
}
.player4 {
  fill: $ranged_green;
}
.player5 {
  fill: $influence_purple;
}
.player6 {
  fill: $tech_grey;
}
.ripplep1 {
  background-color: $magic_red !important;
}
.ripplep2 {
  background-color: $melee_blue !important;
}
.ripplep3 {
  background-color: $music_purple !important;
}
.ripplep4 {
  background-color: $ranged_green !important;
}
.ripplep5 {
  background-color: $influence_purple !important;
}
.ripplep6 {
  background-color: $tech_grey !important;
}

.remote-affector {
  position: relative;
}

.remote_sync {
  width: 100%;
  height: 100%;
  background: black;
  position: fixed;
  z-index: 1000;
  left: 0;
  top: 0;

  > div {
    color: $font_color_dark_primary;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

h1, h2, h3 {
  font-family: $headerFont;
  margin: 0.5em 0 0.2em 0;
  line-height: $lineheight;
}
h1 {
  font-size: 2em;
}
h2 {
  font-size: 1.5em;
  .inline_icon {
    height: 6.5vmin;
    margin-bottom: -1.0vmin;
  }
}
h3 {
  font-size: 1.25em;
}

p {
  margin: 0 0 1em 0;
}
p:first-child {
  margin-top: 1em;
}

a {
  color: $font_color_primary;
  &.linkButton {
    text-decoration: none;
  }
}

.callout {
  p {
    margin-top: 0;
    margin-bottom: 0;
  }
  & > p {
    margin-top: 0.25em;
  }
  margin-bottom: 1em;
}
span.line {
  display: inline-block;
}
.expansionLabel {
  text-align: center;
  margin-top: 0.25em;
}
/* ... */

